--- a/styles.css
+++ b/styles.css
@@ -103,10 +103,10 @@ nav ul {
     display: flex;
     justify-content: flex-end;
     position: absolute;
-    top: 15px;
+    top: 20px;
     right: 20px;
     z-index: 2;
-    margin-right: 15px;
+    margin-right: 25px;
     margin-top: 15px;
 }
 
@@ -141,6 +141,8 @@ nav ul li a {
     height: 350px;
     object-fit: cover;
     margin-bottom: 15px;
+    border-radius: 10px;
+
 }
 
 .prod-button {
@@ -183,17 +185,18 @@ footer {
 }
 
 .contact-links {
-    display: inline-block;
+    /*display: inline-block;*/
     justify-content: center;
     width: 100%;
-    margin-top: 10px;
+    margin-top: 20px;
     size: 90px;
-    /*flex-wrap: wrap;*/
-    /*display: flex;*/
+    flex-wrap: wrap;
+    display: flex;
     /*flex-direction: column;*/
     /*justify-content: center;*/
     align-items: center;
     text-align: center;
+    gap: 40px;
     /*width: 100%;*/
 }
 
@@ -212,11 +215,11 @@ footer {
     header {
         background-position: center center;
         background-size:cover;
-        font-size: 75%;
+        font-size: 70%;
         /*padding: 150px 0;*/
     }
     .product {
-        width: 140px; /* уменьшено на 70% от 200px */
+        width: 170px; /* уменьшено на 70% от 200px */
         padding: 14px; /* уменьшено на 70% от 20px */
         margin: 14px; /* уменьшено на 70% от 20px */
         font-size: 70%;
@@ -225,7 +228,7 @@ footer {
 
     .product img {
         width: 100%;
-        height: 200px;
+        height: 220px;
     }
     header h1,header p{
         margin-left: 20px;
@@ -260,8 +263,9 @@ footer {
     }
 
     .contact-links i {
-        font-size: 1.4rem; /* увеличиваем иконки, чтобы были видимыми */
-        margin-right: 10px;
+        font-size: 2rem; /* увеличиваем иконки, чтобы были видимыми */
+        /*margin-right: 30px;*/
+        /*gap: 20px;*/
     }
     /*body{*/
     /*    font-size: 70%;*/
@@ -285,4 +289,9 @@ footer {
     h2{
         font-size: 2em;
     }
+}
+@media (max-width: 400px){
+.product{
+    margin: 14px 5px;
+}
 }
